[metadata]
name = firecfg.py
version = 0.0.4
url = https://github.com/rusty-snake/firecfg.py
author = rusty-snake
maintainer = rusty-snake
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Desktop Environment
    Topic :: Security
    Topic :: System
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
license = GPL-3.0-or-later
license_files = COPYING, AUTHORS
description = An improved firecfg written in python
long_description = file: README.md
keywords = firejail, firecfg, firecfg.py
platforms = GNU/Linux

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = firecfgpy, firecfgpy.firejailer

[options.entry_points]
console_scripts = firecfg.py = firecfgpy:main

[flake8]
ignore = E501
